# castor

./: .gitignore  CMakeLists.txt  Castor - Enabling automated verification for CPP developers.pptx  Doxyfile  README.md
demos/: basic_arithmetic_functions.cpp  copy_constructor.cpp  equivalence.cpp  inheritance-checked.cpp  inheritance-wontprove.cpp  inheritance.cpp  loop_over_array.cpp  loop_updating_constant.cpp  pointer_swapping.cpp  smart_ptr.cpp
demos/paper/: smart_ptr.cpp  vector.cpp
goose/: .clang-format  .gitignore  CMakeLists.txt  README.md  Tupfile  build.sh
goose/doc/: formalism.tex  macros.sty
goose/src/PEG/: BasicTypes.h  CMakeLists.txt  Expression.h  Grammar.cpp  Grammar.h  LoggerFactory.h  Notes.txt  ParseResult.h  Parser.cpp  Parser.h  Tupfile
goose/src/PEG/Bootstrap/: BootstrapParser.cpp  BootstrapParser.h  peg.goose  peg.goose.new
goose/src/PEG/Expressions/: AndExpression.cpp  AndExpression.h  DotExpression.cpp  DotExpression.h  EmptyExpression.cpp  EmptyExpression.h  NonTerminalExpression.cpp  NonTerminalExpression.h  NotExpression.cpp  NotExpression.h  OptionExpression.cpp  OptionExpression.h  PlusExpression.cpp  PlusExpression.h  RepeatExpression.cpp  RepeatExpression.h  SeqNExpression.cpp  SeqNExpression.h  SequenceExpression.cpp  SequenceExpression.h  TerminalExpression.cpp  TerminalExpression.h
goose/src/PEG/ParseResultType/: FailParseResult.cpp  FailParseResult.h  SuccessParseResult.cpp  SuccessParseResult.h
goose/src/PEG/ParseTree/: PlainParseTree.cpp  PlainParseTree.h  PlainParseTreeFactory.cpp  PlainParseTreeFactory.h
goose/src/PEG/Value/: NothingFactoryInterface.h  ValueFactoryInterface.h  ValueInterface.h
goose/test/: CMakeLists.txt  calc.peg  left.peg  libPEG.h  peg.peg  test_01.cpp  test_02.cpp  test_03.cpp  test_04.cpp  test_05.cpp  test_06.cpp  test_07.cpp  test_08.cpp  test_09.cpp  test_10.cpp  test_11.cpp  test_12.cpp  test_13.cpp  test_14.cpp  test_15.cpp  test_16.cpp  test_18.cpp  test_19.cpp  test_20.cpp  test_22.cpp  test_23.cpp  test_24.cpp  test_25.cpp  test_26.cpp  test_28.cpp  test_29.cpp  test_30.cpp  test_31.cpp  test_32.cpp  test_33.cpp  test_34.cpp  test_35.cpp  test_36.cpp  test_37.cpp  test_38.cpp  (+12 more)
goose/test/json/: test.json
goose/test/pragma/: input.md  input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input08.txt  input09.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  pragma.grammar  pragma.grammar.bk  pragma.grammar.new
goose/theories/: _CoqProject  dune-project
goose/theories/coq/: dune  example_grammars.v  peg.v  pegv2.v
goose/theories/ml/lib/: dune  peg.ml  peg.mli
goose/theories/ml/test/: dune  test_pegs.expected  test_pegs.ml
src/Castor/: class_table.cxx  class_table.hxx  debug_info.cxx  debug_info.hxx  exception.hxx  fill_types.cxx  fill_types.hxx  function_table.cxx  function_table.hxx  helper.cxx  ir.cxx  ir.hxx  irgen_aux.cxx  irgenerator.cxx  irgenerator.hxx  irtraversal.hxx  main.cxx  messaging.hxx  normalization.cxx  normalization.hxx  offset_table.cxx  offset_table.hxx  order_functions.cxx  order_functions.hxx  parser.cxx  parser.hxx  set_metadata.cxx  set_metadata.hxx  settings.hxx  symbol_table.cxx  symbol_table.hxx  types.cxx  types.hxx  validate_ir.cxx  validate_ir.hxx  vc_generator.cxx  vc_generator.hxx  whygen_aux.cxx  whygenerator.cxx  whygenerator.hxx  (+4 more)
src/ast/: ir.ml  ver.ml  whyml.ml
src/grammars/: vc_grammar_lvalue_func.peg  vc_grammar_rvalue_func.peg
src/headers/: climits  cstddef  cstdint  initializer_list  limits.h  math.h  memory  stdint.h  vector
src/theories/: ArithmeticModel-Witness.mlw  ArithmeticModel.mlw  BitVector.mlw  Lemmas.mlw  MemoryModel.mlw  why3find.json
tests/: add.cpp  and_or.cpp  annotate.cpp  array.cpp  array_struct.cpp  assume.cpp  axioms.cpp  big_rvalues.cpp  binops.cpp  byte.cpp  class_cast.cpp  class_members.cpp  const.cpp  constexpr.cpp  ctor_initializer.cpp  decltype.cpp  default_delete.cpp  destructors.cpp  dynamic.cpp  enum.cpp  friend.cpp  func.cpp  ghost.cpp  global_variable.cpp  if.cpp  inheritance.cpp  labels.cpp  lemmas.cpp  limits.cpp  loops.cpp  materialization.cpp  methods.cpp  misc.cpp  modifiers.cpp  multiple_returns.cpp  mutually_recursive.cpp  namespace.cpp  no_body.cpp  no_overflow.cpp  nullptr.cpp  (+17 more)
tests/should_except/: should_except1.cpp  should_except10.cpp  should_except11.cpp  should_except12.cpp  should_except13.cpp  should_except14.cpp  should_except15.cpp  should_except16.cpp  should_except17.cpp  should_except18.cpp  should_except19.cpp  should_except2.cpp  should_except20.cpp  should_except21.cpp  should_except22.cpp  should_except23.cpp  should_except24.cpp  should_except25.cpp  should_except26.cpp  should_except28.cpp  should_except29.cpp  should_except3.cpp  should_except30.cpp  should_except31.cpp  should_except32.cpp  should_except33.cpp  should_except34.cpp  should_except35.cpp  should_except36.cpp  should_except4.cpp  should_except5.cpp  should_except6.cpp  should_except7.cpp  should_except8.cpp  should_except9.cpp
tests/shouldnt_verify/: shouldnt_verify1.cpp  shouldnt_verify10.cpp  shouldnt_verify11.cpp  shouldnt_verify12.cpp  shouldnt_verify13.cpp  shouldnt_verify14.cpp  shouldnt_verify15.cpp  shouldnt_verify16.cpp  shouldnt_verify17.cpp  shouldnt_verify18.cpp  shouldnt_verify19.cpp  shouldnt_verify2.cpp  shouldnt_verify20.cpp  shouldnt_verify21.cpp  shouldnt_verify22.cpp  shouldnt_verify23.cpp  shouldnt_verify24.cpp  shouldnt_verify25.cpp  shouldnt_verify26.cpp  shouldnt_verify27.cpp  shouldnt_verify28.cpp  shouldnt_verify29.cpp  shouldnt_verify3.cpp  shouldnt_verify30.cpp  shouldnt_verify31.cpp  shouldnt_verify32.cpp  shouldnt_verify33.cpp  shouldnt_verify34.cpp  shouldnt_verify35.cpp  shouldnt_verify36.cpp  shouldnt_verify37.cpp  shouldnt_verify38.cpp  shouldnt_verify39.cpp  shouldnt_verify4.cpp  shouldnt_verify40.cpp  shouldnt_verify41.cpp  shouldnt_verify42.cpp  shouldnt_verify43.cpp  shouldnt_verify44.cpp  shouldnt_verify45.cpp  (+8 more)
